--- a/src/styles/reactComponents/projectSwitcher.module.css
+++ b/src/styles/reactComponents/projectSwitcher.module.css
@@ -1,7 +1,6 @@
 .mySwiperSection {
     max-inline-size: 100%;
     inline-size: 100%;
-    block-size: 80dvh;
     position: relative;
     max-width: 100vw;
     margin: 0 auto;
@@ -15,23 +14,26 @@
     visibility: visible;
 }
 
+.mySwiperContainer {
+    block-size: 75dvh;
+    inline-size: 100%;
+}
+
 .myControls {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
+    position: relative;
+    margin: 0 auto;
+    margin-top: -100px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     gap: 1rem;
     z-index: 1000;
     background-color: rgb(23 23 27 / 0.8);
-    inline-size: fit-content;
-    margin: 0 auto;
     border-radius: var(--rounded);
     border: 2px solid var(--color-border);
-    padding: 0.5rem 1rem;
+    padding: 1rem 1.5rem;
+    width: clamp(0px, 95%, 750px);
 }
 
 .projectInfo {
@@ -45,18 +47,6 @@
     p {
         margin-top: 0 !important;
     }
-}
-
-.viewProjectButton {
-    border: 1px solid var(--color-text-primary);
-    padding: 5px 10px;
-    border-radius: var(--rounded-sm);
-    font-weight: bold;
-}
-
-.mySwiperContainer {
-    inline-size: 100%;
-    block-size: 100%;
 }
 
 :global(.swiper) {
@@ -81,4 +71,50 @@
     inline-size: 100%;
     block-size: 100%;
     position: relative;
+}
+
+.projectTitle {
+}
+
+.viewProjectButton {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    line-height: 1;
+    white-space: nowrap;
+}
+
+.learnMore {
+    font-weight: 0.8rem;
+    line-height: 1;
+
+    @media (min-width: 1200px) {
+        font-size: 1rem;
+    }
+}
+
+.rightArrow {
+    line-height: 1;
+    font-size: 1rem;
+
+    @media (min-width: 768px) {
+        font-size: 2rem;
+    }
+}
+
+.arrowButton {
+    display: inline-flex;
+    justify-content: center;
+    algin-items: center;
+    border: none;
+    background: transparent;
+}
+
+.description {
+    display: none;
+
+    @media (min-width: 1200px) {
+        display: block;
+    }
 }
